--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://kinf.club"
+base_url = "https://eaa1674.org"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
